Few fixes and tests on strong files
> Fixed some issues that made the algorithm crash if we tried to read in a given folder.
> Fixed some issues due to a large amount of variables, for example to avoid a problem with too many variables on the same line.
> Temporarily disabled .cnf read from a given folder to do the tests with .txt (still need to fix that later).

--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Example folders
+# Example folders and archives
 saves/
+data/dimacs
+data/dimacs.zip
