--- a/.gitignore
+++ b/.gitignore
@@ -128,8 +128,9 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Example folders and archives
+# Data folders, data files and archives
 saves/
 data/dimacs
 result/
 *.zip
+*.config
